[package]
name = "blog-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rusqlite = "0.34.0"
serde = { version ="1.0.219", features = ["derive"] }
tokio = { version = "1.44.0",  features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
