[package]
name = "blog"
version = "0.1.0"
authors = ["syedhussim <syed.hussain@live.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
futures = "0.3.31"
reqwest = { version = "0.12.15",  features = ["json"] }
rusqlite = "0.33.0"
serde = "1.0.218"
tokio = { version = "1.43.0", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dep:tokio", "dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
